--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat May 23 12:16:26 CDT 2015
+#Sun Feb 28 10:18:06 CST 2016
 sdk.dir=/Users/ryan/Development/Android/sdk
